# vrchat-photo-uploader

./: .env.example  .gitignore  .hintrc  CHANGELOG.md  LICENSE  README.md  SECURITY.md  TEST_IMPROVEMENTS.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.gitgub/workflows/: manual-release.yaml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/install-system-deps/: action.yml
.github/workflows/: manual-release.yaml  prerelease.yaml  release.yaml  test.yaml
e2e/: app.e2e.ts
scripts/: fix-lockfile.js  version-bump.js
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20250106200000_user_webhooks.sql
src-tauri/src/: background_watcher.rs  commands.rs  config.rs  database.rs  errors.rs  image_processor.rs  lib.rs  main.rs  metadata_editor.rs  security.rs  single_instance.rs  test_helpers.rs  uploader.rs()
src-tauri/src/uploader/: discord_client.rs  image_groups.rs  mod.rs  progress_tracker.rs  retry.rs  session_manager.rs  upload_queue.rs
src-tauri/tests/: compression_tests.rs  database_tests.rs  discord_webhook_tests.rs  integration_tests.rs  metadata_tests.rs
src/test/: README.md  event-handling.test.ts  example.test.ts  helpers.ts  integration.test.ts  setup.ts  state-management.test.ts  tauri-commands.test.ts  ui.test.ts
