[package]
name = "VRChat-Photo-Uploader"
version = "4.0.0"
description = "A powerful tool for uploading VRChat photos to Discord"
authors = ["Fynn9563"]
repository = "https://github.com/fynn9563/vrchat-photo-uploader"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "devtools"] }

# Dependencies for manual single-instance implementation
sysinfo = "0.30"
ctrlc = "3.4"

serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json", "multipart", "stream"] }
sqlx = { version = "0.8.1", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono",
    "uuid"
] }
thiserror = "1.0.56"
log = "0.4.20"
env_logger = "0.11.1"
chrono = { version = "0.4.33", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
dirs = "5.0.1"
regex = "1.10.2"
anyhow = "1.0"
image = { version = "0.25", features = ["png", "jpeg", "webp", "gif"] }
webp = "0.3"
# AVIF encoding - pure Rust by default (no NASM required)
# Enable "nasm" feature for faster encoding when NASM is available
# "threading" feature enables multi-threaded encoding via rayon
ravif = { version = "0.11", default-features = false, features = ["threading"] }
rgb = "0.8"
flate2 = "1.0.28"
notify = "6.1"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
# Enable NASM-optimized AVIF encoding (faster, requires NASM installed at build time)
nasm = ["ravif/asm"]

[dev-dependencies]
serial_test = "3"
dotenvy = "0.15"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
incremental = true
debug = true

[[bin]]
name = "VRChat-Photo-Uploader"
path = "src/main.rs"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
